--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,9 @@
 
 <body>
   <div class="container">
+     <audio id="my-audio" controls autoplay>
+            <source src='' type="audio/mpeg">
+     </audio>
     <video class="input_video"></video>
     <canvas class="output_canvas" width="1280px" height="720px"></canvas>
   </div>
