--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,10 @@
     
     <video class="input_video"></video>
     <canvas class="output_canvas" width="1280px" height="720px"></canvas>
+      <audio id="audio" controls="controls" autoplay>
+      <source id="audioSource" src="" ></source>
+      Your browser does not support the audio format.
+    </audio>
   </div>
   <script src="{{url_for('static',filename='js/app.js')}}"></script>
 </body>
